# devops_assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/devops_assignment/: __init__.py  app.py  s3_phone_book_manager.py
